[project]
name = "bluetooth_route_timer"
version = "0.1.0"
description = "Time routes using Bluetooth sensors"
requires-python = ">=3.13.2"
dependencies = [
    "bleak>=0.21.1",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["bluetooth_route_timer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"] 

[tool.uv]
resolution = "highest"
prerelease = "disallow"